# robot_task_recognition_rl

./: README.md  Untitled.ipynb  architecture.py  pyproject.toml  requirements.txt
agent1_and_agent2/: IA705_ProjetRL_Agent1&Agent2.ipynb
agent1_patterns_chests_to_reach/approach1_simple_event_mapping/: evaluate_agent.py
agent1_patterns_chests_to_reach/approach1_simple_event_mapping/agents/: actor_critic.py  dqn_agent.py  ppo_agent.py  replay_buffer.py
agent1_patterns_chests_to_reach/approach1_simple_event_mapping/encoder/: encoders.py
agent1_patterns_chests_to_reach/approach1_simple_event_mapping/evaluation/: evaluation_actor_critic.py  evaluation_dqn.py
agent1_patterns_chests_to_reach/approach1_simple_event_mapping/plot_results/: plot_results_actor_critic.py  plot_results_dqn.py
agent1_patterns_chests_to_reach/approach1_simple_event_mapping/training/: train_actor_critic.py  train_agent.py  (+1 more)
agent1_patterns_chests_to_reach/config/: agent1_dqn_simple.yaml  agent1_ppo_simple.yaml
agent1_patterns_chests_to_reach/env/: constants.py  register_envs.py  vec_transpose_dict.py  wrappers.py
agent1_patterns_chests_to_reach/notebook/: IA705_ProjectRL_agent1.ipynb
agent1_patterns_chests_to_reach/utils/: data_collectors.py  encoders.py  event_encoding.py  plot_learning_curves.py  visualization.py
agent2_physically_reach_chest/: IA705-ProjetRL_agent2.ipynb
debug/: debug_env_interaction.py
notebooks/: Reinforcement_Learning_Project.ipynb  TP_DQN_and_Gymnasium_environment_Corrige.ipynb  agent1_achievements.ipynb  agent1_achievements_colab.ipynb  register_envs.py
(+45 files in other folders)
